# SivAndroid

./: README.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/jp/siv3d/test/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  Main.cpp  Renderer.cpp  Shader.cpp  TextureAsset.cpp  Utility.cpp  main.cpp
Android/app/src/main/java/jp/siv3d/test/: MainActivity.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/jp/siv3d/test/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/siv3d/: build.gradle.kts
Android/siv3d/src/main/cpp/: CMakeLists.txt  library.cpp
Siv3D/include/: Siv3D.hpp
Siv3D/include/Siv3D/: Platform.hpp
Siv3D/src/Siv3D-Platform/Android/Siv3D/: Siv3DMain.cpp
